fix: resolve work title text flickering during transition

--- a/app/globals.css
+++ b/app/globals.css
@@ -120,42 +120,6 @@ table {
   view-transition-name: jiksi;
 }
 
-::view-transition-old(jiksi) {
-  animation: fade-out 0.8s ease-in-out;
-}
-
-::view-transition-new(jiksi) {
-  animation: fade-in-up 0.4s ease-in-out;
-}
-
-@keyframes fade-out {
-  0% {
-    transform: translateY(0) translateX(-0.2px);
-    opacity: 1;
-    font-weight: 500;
-  }
-
-  20% {
-    transform: translateY(24px) translateX(-0.2px);
-    opacity: 0.5;
-  }
-
-  40% {
-    transform: translateY(24px) translateX(-0.2px);
-    opacity: 0.3;
-  }
-
-  60% {
-    transform: translateY(24px) translateX(-0.2px);
-    opacity: 0.2;
-  }
-
-  100% {
-    transform: translateY(24px) translateX(-0.2px);
-    opacity: 0;
-  }
-}
-
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -170,28 +134,6 @@ table {
   }
 
   100% {
-    opacity: 1;
-  }
-}
-
-@keyframes fade-in-up {
-  0% {
-    transform: translateY(24px) translateX(-0.2px);
-    opacity: 0;
-  }
-
-  20% {
-    transform: translateY(24px) translateX(-0.2px);
-    opacity: 0.5;
-  }
-
-  80% {
-    transform: translateY(0) translateX(-0.2px);
-    opacity: 0.7;
-  }
-
-  100% {
-    transform: translateY(0) translateX(-0.2px);
     opacity: 1;
   }
 }
